@@ -25,4 +25,7 @@
   </td>
 <% end -%>
   </td>
+  <td class='comment zazen'>
+    <%= li.comment ? zazen(li.comment) : '' %>
+  </td>
 </tr>
