@@ -11,6 +11,7 @@
  * Fixed 'unknown this' bug in [calendar] when rendering in a [block].
  * Enabled 'alt_class' to work on multiple elements ([each]).
  * Fixed ajax bugs with dom_ids in nested partials.
+ * Better Acl display, comments on relations.
 
 == 1.1.3 2011-11-09
 
